Update behavior: add delay to drag and resize to prevent accidental move, change z-index so that icons are on top, add click anywhere to close for settings
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@9326 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -737,7 +737,7 @@ a:hover > .tooltip:before, a:hover > .tooltip:after {
 }
 .upfront-module:hover {
 	outline: 1px dotted #5c7c9b;
-	z-index: 40;
+	/*z-index: 40;*/
 }
 .upfront-dragging .upfront-module {
 	outline: 1px dotted #5c7c9b;
@@ -745,11 +745,11 @@ a:hover > .tooltip:before, a:hover > .tooltip:after {
 }
 .upfront-dragging .upfront-module:hover {
 	outline: 1px dotted #5c7c9b;
-	z-index: 40;
+	/*z-index: 40;*/
 }
 .upfront-object {
 	position: relative;
-	z-index: 10;
+	/*z-index: 10;*/
 }
 .show-debug .upfront-object {
 	border: 1px solid #bada55;
@@ -762,9 +762,13 @@ a:hover > .tooltip:before, a:hover > .tooltip:after {
 	width: 100%;
 	height: 100%;
 	z-index: 20;
+	display: none;
 }
 .upfront-active_entity > .upfront-module > .upfront-drag-handle {
-	z-index: 0;
+	display: none;
+}
+.handle-active .upfront-drag-handle {
+	display: block;
 }
 .upfront-debug-info {
 	display: none;
@@ -885,8 +889,8 @@ a:hover > .tooltip:before, a:hover > .tooltip:after {
 	color:#fff;
 	text-decoration:none;
 }
-.upfront-editable_entity:hover .upfront-entity_meta a,
-.upfront-active_entity .upfront-entity_meta a {
+.upfront-editable_entity:hover .upfront-entity_meta a/*,
+.upfront-active_entity .upfront-entity_meta a*/ {
   display: block;
 }
 .upfront-entity_meta a.upfront-entity-settings_trigger {
